list representation of matrix

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
 
-    "name": "OCW-i Auto-login",
+    "name": "Titech Portal Auto-login",
     "description": "No more matrix lookups!",
     "version": "1.0",
 
