--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,20 @@
     "name": "Titech Portal Auto-login",
     "description": "No more tedious matrix lookups!",
     "version": "0.1",
+    "homepage_url": "https://github.com/hagward/titechportal-autologin",
+
     "options_page": "options.html",
-    "background": { "scripts": ["background.js"] },
+
+    "icons": {
+        "16": "images/icon16.png",
+        "48": "images/icon48.png",
+        "128": "images/icon128.png"
+    },
+
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+    },
 
     "page_action": {
         "default_icon": {
