--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
 
     "name": "Titech Portal Auto-login",
     "description": "No more tedious matrix lookups!",
-    "version": "0.1.0.5",
+    "version": "0.1.1.0",
     "homepage_url": "https://github.com/hagward/titechportal-autologin",
 
     "options_page": "options.html",
@@ -15,21 +15,25 @@
     },
 
     "background": {
-        "scripts": ["background.js"],
-        "persistent": false
+        "service_worker": "background.js"
     },
 
-    "page_action": {
+    "action": {
         "default_icon": {
-            "19": "images/icon19.png",
-            "38": "images/icon38.png"
+            "16": "images/icon16.png",
+            "48": "images/icon48.png",
+            "128": "images/icon128.png"
         },
         "default_title": "Titech Portal Auto-login"
     },
 
     "permissions": [
-        "tabs",
-        "storage",
+        "declarativeContent",
+        "scripting",
+        "storage"
+    ],
+
+    "host_permissions": [
         "https://portal.nap.gsic.titech.ac.jp/*"
     ]
 }
